# Cheeze

./: .gitignore  LICENSE  README.md  linecount.py  pyproject.toml
cheeze/: __init__.py
cheeze/animation/: __init__.py  animation_fade.py  animation_object.py  result.py  rotation.py
cheeze/app/: __init__.py  app_pg.py  build_context.py  color_theme.py  font_loader.py  font_loader_pg.py  text_theme.py
cheeze/default/: color_theme.py  shaders.py  text_theme.py
cheeze/event/: __init__.py  event_object.py
cheeze/layout_manager/: __init__.py  alignment.py  layout_object.py  layout_sequence.py  layout_simple.py  shader_bounds.py  units.py  utils.py
cheeze/shader/: __init__.py  animation_shader.py  shader_object.py  shader_pack.py  shader_pg.py
cheeze/widget/: __init__.py  widget.py
tests/: pgutils.py  test_layout_manager.py
