[tool.poetry]
name = "cheeze"
version = "0.1.0"
description = "An extensible GUI library that allows multiple backends"
authors = ["Amaan <71920621+amaank404@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "cheeze" },
]
include = [
    "cheeze/default/fonts"
]

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
